# klass-pay

./: .env  Cargo.toml  README.md  audit_report.md  fake_users.csv  level7_users.csv  monthly_growth_report.md  old_app.tsx  user_feedback_data.csv
.agents/: AGENTS.md
contracts/klass-pay/: Cargo.toml
contracts/klass-pay/src/: lib.rs  test.rs
frontend/: .env  check-contract.js  check-mainnet.cjs  index.html  package-lock.json  package.json  simulate_users.js
frontend/src/: App.tsx  Landing.tsx  contractRuntime.ts  firebase.ts  index.css  main.tsx  previewActions.ts  sorobanClient.ts  ui.css  wallet.ts
