[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"

[workspace.dependencies]
soroban-sdk = "22.0.8"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true